// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TripItem /> should render component with duration 1 1`] = `
<Link 
  className="trip-item-container"
  to="/trips/_id"
>
  <div
    className="header"
  >
    <h2 />
  </div>
  <div
    className="items"
  >
    <div
      className="country"
    >
      country
    </div>
    <div
      className="bubble"
    >
      <strong>
        Expences:
      </strong>
       $expences
    </div>
    <div
      className="bubble"
    >
      <strong>
        Duration:
      </strong>
       1 day
    </div>
    <div
      className="bubble rating"
    >
      <strong>
        Rating:
      </strong>
       rating / 5
    </div>
  </div>
</Link >
`;

exports[`<TripItem /> should render component with duration 10 1`] = `
<Link 
  className="trip-item-container"
  to="/trips/_id"
>
  <div
    className="header"
  >
    <h2 />
  </div>
  <div
    className="items"
  >
    <div
      className="country"
    >
      country
    </div>
    <div
      className="bubble"
    >
      <strong>
        Expences:
      </strong>
       $expences
    </div>
    <div
      className="bubble"
    >
      <strong>
        Duration:
      </strong>
       10 days
    </div>
    <div
      className="bubble rating"
    >
      <strong>
        Rating:
      </strong>
       rating / 5
    </div>
  </div>
</Link >
`;
